# mirror-microcad

./: .gitignore  .woodpecker.yaml  CONTRIBUTE.md  Cargo.toml  README.md  about.toml  gfgg  microcad.code-workspace  package-lock.json  rust-toolchain.toml  rustfmt.toml  test.ucad  test.µcad
builtin/proc_macros/: Cargo.toml
builtin/proc_macros/src/: lib.rs
crates/builtin/: Cargo.toml  README.md  array.rs  color.rs  debug.rs  dirs.rs  import.rs  lib.rs  log.rs  math.rs  print.rs  string.rs  tests.rs
crates/builtin-proc-macros/: Cargo.toml  README.md
crates/builtin-proc-macros/src/: derive.rs  lib.rs
crates/builtin/api/: export.rs  module_builder.rs  operation.rs
crates/builtin/debug/: assert.rs  mod.rs
crates/builtin/geo2d/: circle.rs  involute_gear.rs  line.rs  mod.rs  ngon.rs  rect.rs  rounded_rect.rs  sector.rs  sinusoidal_gear.rs  text.rs  thread_profile.rs
crates/builtin/geo3d/: mod.rs  sphere.rs
crates/builtin/lab/: bezier.rs  mod.rs
crates/builtin/log/: mod.rs
crates/builtin/ops/: align.rs  buffer.rs  center.rs  distribute_grid.rs  extrude.rs  hull.rs  mirror.rs  mod.rs  orient.rs  reflect.rs  revolve.rs  rotate.rs  scale.rs  spiralize.rs  translate.rs
crates/cli/: Cargo.toml  README.md  cli.rs  config.rs  main.rs
crates/cli/commands/: check.rs  completions.rs  create.rs  doc.rs  eval.rs  export.rs  format.rs  install.rs  mod.rs  parse.rs  resolve.rs  watch.rs
crates/cli/examples/: hello.µcad
crates/core/: Cargo.toml  README.md  boolean_op.rs  bounds.rs  color.rs  core_error.rs  hash.rs  length.rs  lib.rs  render.rs  traits.rs  triangle.rs
crates/core/geo2d/: align.rs  bezier.rs  bounds.rs  circle.rs  collection.rs  geometry.rs  line.rs  mod.rs  primitives.rs  reflect.rs  size.rs
crates/core/geo3d/: align.rs  bounds.rs  collection.rs  extrude.rs  geometry.rs  mesh.rs  mod.rs  plane.rs  reflect.rs  triangle.rs  vertex.rs
crates/docgen/: Cargo.toml  lib.rs
crates/docgen/md/: markdown.rs  mod.rs  section.rs  to_md.rs
crates/docgen/mdbook/: mod.rs
crates/docgen/src/: lib.rs
crates/driver/: Cargo.toml  README.md
crates/driver/src/: config.rs  document.rs  export.rs  lib.rs  locate.rs  prelude.rs  session.rs  watcher.rs
crates/driver/tests/: locate.rs  value_from_str.rs
crates/export/: Cargo.toml  README.md  lib.rs
crates/export/json/: mod.rs
crates/export/ply/: mod.rs  writer.rs
crates/export/stl/: exporter.rs  mod.rs  primitives.rs  writer.rs
crates/export/svg/: attributes.rs  canvas.rs  exporter.rs  mod.rs  primitives.rs  tests.rs  writer.rs
crates/export/wkt/: mod.rs
crates/import/: Cargo.toml  README.md  lib.rs  toml.rs
crates/inspector/: Cargo.toml  README.md  build.rs  main.rs  symbol_info.rs  to_slint.rs  watcher.rs
crates/inspector/ui/: mainwindow.slint  viewmodel.slint
crates/lang/: Cargo.toml  README.md  doc.rs  grammar.pest  lib.rs  ord_map.rs  parser.rs  rc.rs  tree_display.rs
crates/lang-base/: Cargo.toml  README.md
crates/lang-base/src/: code_display.rs  identifier.rs  lib.rs  ord_map.rs  rc.rs  source.rs  tree_display.rs
crates/lang-base/tests/: compare.rs
crates/lang-format/: Cargo.toml
crates/lang-format/src/: error.rs  expression.rs  extras.rs  lib.rs  literal.rs  node.rs  statement.rs  ty.rs
crates/lang-format/tests/: format.rs
crates/lang-lower/: Cargo.toml  README.md
crates/lang-lower/src/: lib.rs
crates/lang-lower/tests/: doc_block.rs  expression.rs  lower.rs
crates/lang-markdown/: Cargo.toml  extract.rs
crates/lang-markdown/src/: code_block.rs  lib.rs  markdown.rs  mdbook.rs  paragraph.rs  parser.rs  section.rs  test.rs
crates/lang-markdown/tests/: parser.rs
crates/lang-parse/: Cargo.toml  README.md
crates/lang-parse/src/: lib.rs  source.rs  token.rs
crates/lang-parse/tests/: lexer.rs  literal.rs  parser.rs  tokenizer.rs
crates/lang-proc-macros/: Cargo.toml  README.md
crates/lang-proc-macros/src/: lib.rs
crates/lang-types/: Cargo.toml  README.md
crates/lang-types/src/: lib.rs
crates/lang-types/tests/: ty.rs  value.rs
crates/lang/builtin/: builtin.rs  export.rs  file_io.rs  import.rs  mod.rs  module_builder.rs  operation.rs  workpiece.rs
crates/lang/diag/: diag_error.rs  diag_handler.rs  diag_list.rs  diagnostic.rs  level.rs  mod.rs
crates/lang/doc/: CONCEPTS.md  GLOSSARY.md  README.md
crates/lang/eval/: argument_match.rs  attribute.rs  body.rs  deduce_type.rs  eval_context.rs  eval_error.rs  expression.rs  format_string.rs  function.rs  grant.rs  init.rs  literal.rs  mod.rs  module_definition.rs  output.rs  parameter.rs  source_file.rs  sources.rs  tuple.rs  workbench.rs
crates/lang/lower/: mod.rs
crates/lang/model/: builder.rs  creator.rs  element.rs  inner.rs  iter.rs  mod.rs  models.rs  operation.rs  ops.rs  output_type.rs  properties.rs  workpiece.rs
crates/lang/parse/: attribute.rs  body.rs  call.rs  doc_block.rs  expression.rs  format_string.rs  function.rs  identifier.rs  init_definition.rs  lang_type.rs  literal.rs  mod.rs  module.rs  parameter.rs  parse_error.rs  source_file.rs  statement.rs  type.rs  use.rs  workbench.rs
crates/lang/render/: attribute.rs  cache.rs  context.rs  hash.rs  mod.rs  output.rs
crates/lang/resolve/: deduce_type.rs  externals.rs  grant.rs  lookup.rs  mod.rs  resolve_context.rs  resolve_error.rs  sources.rs  symbol_table.rs  symbolize.rs
crates/lsp/: Cargo.toml  README.md
crates/markdown-support/: Cargo.toml  lib.rs  main.rs  md.rs
crates/std/: Cargo.toml  README.md  lib.rs  manifest.rs
crates/syntax/: Cargo.toml  README.md
crates/viewer/: Cargo.toml  README.md
crates/viewer-ipc/: Cargo.toml  README.md  lib.rs  manual_test.rs
editors/zed/: Cargo.toml  README.md  extension.toml  package.json
tests/: Cargo.toml  README.md  build.rs  lib.rs  markdown_test.rs
tests/examples_tests/: Cargo.toml  lib.rs
tests/microcad_markdown_test/: Cargo.toml  lib.rs
tests/microcad_pest_test/: Cargo.toml
tests/microcad_test_tools/: Cargo.toml  lib.rs  output.rs  test_env.rs
tests/test_files/: doc.µcad
tests/update-copyright/: Cargo.toml  README.md
tests/update-md-banner/: Cargo.toml
(+1778 files in other folders)
