# Copyright © 2024-2026 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
default-members = [
    "crates/builtin",
    "crates/builtin-proc-macros",
    "crates/cli",
    "crates/core",
    "crates/export",
    "crates/import",
    "crates/lang",
    "crates/lsp",
    "crates/std",
    "crates/syntax",
    "crates/viewer-ipc",

    "tests",
    "tools/update-copyright",
    "tools/update-md-banner",
]

members = [
    "crates/builtin",
    "crates/builtin-proc-macros",
    "crates/cli",
    "crates/core",
    "crates/export",
    "crates/import",
    "crates/lang",
    "crates/lsp",
    "crates/std",
    "crates/syntax",
    "crates/viewer-ipc",

    "tests",
    "tools/update-copyright",
    "tools/update-md-banner",

    # Non default members
    "crates/viewer",
    "crates/inspector",
]
resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.3.0"
edition = "2024"
homepage = "https://microcad.xyz"
repository = "https://codeberg.org/microcad/microcad"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "printing", "cnc", "openscad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
debug-cell = { git = "https://github.com/fightling/debug-cell.git", version = "0.1.1" }
microcad-core = { path = "crates/core" }
microcad-syntax = { path = "crates/syntax" }
microcad-import = { path = "crates/import" }
microcad-export = { path = "crates/export" }
microcad-lang = { path = "crates/lang" }
microcad-builtin = { path = "crates/builtin" }
microcad-builtin-proc-macros = { path = "crates/builtin-proc-macros" }
microcad-viewer-ipc = { path = "crates/viewer-ipc" }
microcad-viewer = { path = "crates/viewer" }
microcad-std = { path = "crates/std" }
