# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
default-members = [
    "crates/builtin",
    "crates/builtin-proc-macros",
    "crates/cli",
    "crates/core",
    "crates/export",
    "crates/import",
    "crates/lang",
    "crates/lang-base",
    "crates/lang-proc-macros",
    "crates/lsp",
    "crates/docgen",
    "crates/std",
    "crates/syntax",
    "crates/viewer-ipc",

    "tests",
    "tests/update-copyright",
    "tests/update-md-banner",
]

members = [
    "crates/builtin",
    "crates/builtin-proc-macros",
    "crates/cli",
    "crates/core",
    "crates/export",
    "crates/import",
    "crates/lang",
    "crates/lang-base",
    "crates/lang-proc-macros",
    "crates/lsp",
    "crates/docgen",
    "crates/std",
    "crates/syntax",
    "crates/viewer-ipc",

    "tests",
    "tests/update-copyright",
    "tests/update-md-banner",

    # Non default members
    "crates/viewer",
    "crates/inspector",
]
resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.4.0"
edition = "2024"
homepage = "https://microcad.xyz"
repository = "https://codeberg.org/microcad/microcad"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "cnc", "openscad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
microcad-core = { path = "crates/core", version = "0.4.0" }
microcad-syntax = { path = "crates/syntax", version = "0.4.0" }
microcad-import = { path = "crates/import", version = "0.4.0" }
microcad-export = { path = "crates/export", version = "0.4.0" }
microcad-lang = { path = "crates/lang", version = "0.4.0" }
microcad-lang-base = { path = "crates/lang-base", version = "0.4.0" }
microcad-lang-proc-macros = { path = "crates/lang-proc-macros", version = "0.4.0" }
microcad-docgen = { path = "crates/docgen", version = "0.4.0" }
microcad-builtin = { path = "crates/builtin", version = "0.4.0" }
microcad-builtin-proc-macros = { path = "crates/builtin-proc-macros", version = "0.4.0" }
microcad-viewer-ipc = { path = "crates/viewer-ipc", version = "0.4.0" }
microcad-viewer = { path = "crates/viewer", version = "0.4.0" }
microcad-std = { path = "crates/std", version = "0.4.0" }
