# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
members = [
    "crates/builtin",
    "crates/builtin-proc-macros",
    "crates/cli",
    "crates/core",
    "crates/docgen",
    "crates/driver",
    "crates/export",
    "crates/import",
    "crates/lang-base",
    "crates/lang-eval",
    "crates/lang-format",
    "crates/lang-lower",
    "crates/lang-markdown",
    "crates/lang-parse",
    "crates/lang-proc-macros",
    "crates/lang-resolve",
    "crates/lang-types",
    "crates/lsp",
    "crates/model",
    "crates/render",
    "crates/std",
    "crates/symbol",
    "crates/viewer",
    "crates/viewer-ipc",
    "crates/inspector",

    "editors/zed",

    "tests",
    "tests/update-copyright",
    "tests/update-md-banner",
]

resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.6.0"
edition = "2024"
homepage = "https://microcad.xyz"
repository = "https://codeberg.org/microcad/microcad"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "cnc", "openscad"]

[workspace.dependencies]
microcad-builtin = { path = "crates/builtin", version = "0.6.0" }
microcad-builtin-proc-macros = { path = "crates/builtin-proc-macros", version = "0.6.0" }
microcad-core = { path = "crates/core", version = "0.6.0" }
microcad-docgen = { path = "crates/docgen", version = "0.6.0" }
microcad-driver = { path = "crates/driver", version = "0.6.0" }
microcad-export = { path = "crates/export", version = "0.6.0" }
microcad-import = { path = "crates/import", version = "0.6.0" }
microcad-lang-base = { path = "crates/lang-base", version = "0.6.0" }
microcad-lang-eval = { path = "crates/lang-eval", version = "0.6.0" }
microcad-lang-format = { path = "crates/lang-format", version = "0.6.0" }
microcad-lang-lower = { path = "crates/lang-lower", version = "0.6.0" }
microcad-lang-markdown = { path = "crates/lang-markdown", version = "0.6.0" }
microcad-lang-parse = { path = "crates/lang-parse", version = "0.6.0" }
microcad-lang-proc-macros = { path = "crates/lang-proc-macros", version = "0.6.0" }
microcad-lang-resolve = { path = "crates/lang-resolve", version = "0.6.0" }
microcad-lang-types = { path = "crates/lang-types", version = "0.6.0" }
microcad-lsp = { path = "crates/lsp", version = "0.6.0" }
microcad-model = { path = "crates/model", version = "0.6.0" }
microcad-render = { path = "crates/render", version = "0.6.0" }
microcad-std = { path = "crates/std", version = "0.6.0" }
microcad-symbol = { path = "crates/symbol", version = "0.6.0" }
microcad-viewer-ipc = { path = "crates/viewer-ipc", version = "0.6.0" }
microcad-viewer = { path = "crates/viewer", version = "0.6.0" }
