# Copyright © 2024-2026 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-tests"
description = "Test generator for the µcad language"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
log = "0.4"
ctor = "0.6"
env_logger = "0.11"
miette = "7.6.0"

microcad-core = { workspace = true }
microcad-lang = { workspace = true }
microcad-builtin = { workspace = true }
microcad-export = { workspace = true }
microcad_test_tools = { path = "microcad_test_tools", version = "0" }

[build-dependencies]
microcad_markdown_test = { path = "microcad_markdown_test", version = "0" }
microcad_test_tools = { path = "microcad_test_tools", version = "0" }
examples_tests = { path = "examples_tests", version = "0" }
update_copyright = { path = "update-copyright", version = "0" }
update_md_banner = { path = "update-md-banner", version = "0" }

[lints.rust]
#missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
