# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-tests"
description = "Test generator for the µcad language"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
miette = "7.6.0"

microcad_test_tools = { path = "microcad_test_tools", version = "0" }
microcad-driver = { workspace = true }

[build-dependencies]
microcad_markdown_test = { path = "microcad_markdown_test", version = "0" }
microcad_test_tools = { path = "microcad_test_tools", version = "0" }
update_copyright = { path = "update-copyright", version = "0" }
update_md_banner = { path = "update-md-banner", version = "0" }
miette = "7.6.0"
