# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-builtin"
description = "µcad Builtin Library"
documentation = "https://docs.rs/microcad-std"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license = "AGPL-3.0-or-later"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
lazy_static = "1.5"
cgmath = "0.18"
dirs = "6"
geo = "0.31"
ctor = "0.6"
env_logger = "0.11"
geo_rusttype = "0.2.0"
rusttype = "0.9.3"

microcad-builtin-proc-macros = { workspace = true }
microcad-core = { workspace = true }
microcad-lang = { workspace = true }
microcad-export = { workspace = true }
microcad-import = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
