# Copyright © 2024-2025 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad"
description = "µcad Command Line Interface"
documentation = "https://docs.rs/microcad"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
default-run = "microcad"

[[bin]]
name = "microcad"
path = "main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.9"
notify = "8"
dirs = "6"
num-format = "0.4"
rust-embed = "8.9"
miette = { version = "7.6.0", features = ["fancy"] }

microcad-lang = { workspace = true }
microcad-core = { workspace = true }
microcad-builtin = { workspace = true }
microcad-export = { workspace = true }
microcad-std = { workspace = true }

[build-dependencies]
walkdir = "2"
miette = "7.6.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
