# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-core"
description = "µcad core"
documentation = "https://docs.rs/microcad-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
cgmath = { version = "0.18", features = ["serde"] }
derive_more = { version = "2", features = ["deref", "deref_mut", "from"] }
geo = { version = "0.32", features = ["use-serde"] }
log = "0.4"
manifold-rs = { version = "0.6.4" }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"
bytemuck = "1.24.0"
miette = "7.6.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
