# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-export"
description = "µcad export"
documentation = "https://docs.rs/microcad-export"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
microcad-core = { workspace = true }
microcad-lang = { workspace = true }
log = "0.4"
env_logger = "0.11"
serde_json = "1"
wkt = "0.14"

cgmath = "0.18"
derive_more = { version = "2", features = ["deref", "deref_mut"] }
geo = "0.31"
thiserror = "2.0.12"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
