# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-import"
description = "µcad import"
documentation = "https://docs.rs/microcad-import"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
microcad-core = { workspace = true }
microcad-lang = { workspace = true }
thiserror = "2.0.12"
toml = "0.9"
serde = "1"


[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
