# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-inspector"
description = "µcad Inspector"
documentation = "https://docs.rs/microcad-inspector"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
default-run = "microcad-inspector"

[[bin]]
name = "microcad-inspector"
path = "main.rs"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.9"
notify = "8"
slint = "1.13"

microcad-lang = { workspace = true }
microcad-core = { workspace = true }
microcad-builtin = { workspace = true }
microcad-export = { workspace = true }
microcad-viewer-ipc = { workspace = true }

[build-dependencies]
slint-build = "1.13"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
