# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang-format"
description = "µcad language formatter"
documentation = "https://docs.rs/microcad-lang-format"
authors = ["Michael Winkelmann (michael@winkelmann.site)"]
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
microcad-lang-base = { workspace = true }
microcad-syntax = { workspace = true }

thiserror = "2.0"
compact_str = "0.9.0"

[dev-dependencies]
insta = "1.45.0"
pretty_assertions = "1.4"
