# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang-markdown"
description = "µcad language markdown support"
documentation = "https://docs.rs/microcad-lang-markdown"
authors = ["Michael Winkelmann (michael@winkelmann.site)"]
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[[bin]]
name = "microcad-lang-markdown-extract"
path = "extract.rs"
required-features = ["bin_extract"]


[dependencies]
derive_more = { version = "2", features = ["deref", "deref_mut"] }
thiserror = "2.0"
miette = "7.3.0"

# Uses for md-extractor
clap = { version = "4", features = ["derive"], optional = true }

microcad-lang-base = { workspace = true }

[dev-dependencies]
insta = "1.45.0"

[features]
# Dependencies for md extractor
bin_extract = ["dep:clap"]
