# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang-parse"
description = "µcad language syntax lexer and parser"
documentation = "https://docs.rs/microcad-lang-parse"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
chumsky = "0.13.0"
derive_more = { version = "2", features = ["deref"] }
either = "1.15.0"
logos = "0.16.0"
miette = "7.6.0"
thiserror = "2.0.17"

microcad-lang-base = { workspace = true }

[dev-dependencies]
insta = { version = "1.45.0" }
test-case = "3.3.1"
miette = { version = "7.6.0", features = ["fancy"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
