# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang-proc-macros"
description = "Provides procedural macros for µcad language items."
authors = ["Michael Winkelmann (michael@winkelmann.site)"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.11"
