# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang-types"
description = "µcad language types"
authors = ["Michael Winkelmann (michael@winkelmann.site)"]
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytemuck = "1.24.0"
cgmath = "0.18"
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "display",
    "debug",
] }
log = "0.4"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
round = "0.1.2"
rustc-hash = "2.1.1"
strum = { version = "0.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

thiserror = "2.0.17"

microcad-core = { workspace = true }
microcad-lang-base = { workspace = true }
microcad-lang-proc-macros = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.45.0"
