# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang"
description = "µcad language"
documentation = "https://docs.rs/microcad-lang"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
compact_str = { version = "0.9", features = ["serde"] }
bytemuck = "1.24"
log = "0.4"
pest = "2.8"
pest_derive = "2.8"
lazy_static = "1.5"
cgmath = "0.18"
thiserror = "2.0"
env_logger = "0.11"
strum = { version = "0.27", features = ["derive"] }
scan_dir = "0.3"
delegate = "0.13"
pathdiff = "0.2"
ctor = "0.6"
color-print = { version = "0.3", optional = true }
sqids = "0.4"
indexmap = "2"
rustc-hash = "2.1.1"
miette = { version = "7.6.0", features = ["derive", "fancy"] }

microcad-core = { workspace = true }
microcad-syntax = { workspace = true }
custom_debug = "0.6.2"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
debug-cell = { workspace = true, optional = true }
round = "0.1.2"

[features]
default = ["ansi-color"]
ansi-color = ["dep:color-print"]
debug-cell = ["dep:debug-cell"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
