# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lsp"
description = "LSP implementation for µcad language"
documentation = "https://docs.rs/microcad-lsp"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = ["microcad", "lsp", "language"]
categories = ["development-tools"]

[dependencies]
miette = "7.6.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
dirs = "6"
env_logger = "0.11.8"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"

microcad-driver = { workspace = true }
microcad-viewer-ipc = { workspace = true }

[dev-dependencies]
googletest = { git = "https://github.com/hovinen/googletest-rust.git", branch = "fix-container-iterating-over-owned-values" }

microcad-driver = { workspace = true }

[[bin]]
name = "microcad-lsp"
path = "src/server.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
