# Copyright © 2026 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-markdown-support"
description = "µcad Markdown Support"
documentation = "https://docs.rs/microcad-markdown-support"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[[bin]]
name = "microcad-mdbook-generator"
path = "main.rs"

[dependencies]
toml = { version = "0.9", features = ["serde"] }
serde = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }


microcad-lang = { workspace = true }
microcad-builtin = { workspace = true }
