[package]
name = "microcad-syntax"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
logos = "0.16.0"
indexmap = "2.12.1"
compact_str = "0.9.0"
chumsky = "1.0.0-alpha.8"

[dev-dependencies]
insta = { version = "1.45.0" }