# Copyright © 2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-viewer-ipc"
description = "µcad Viewer Interprocess Communication"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
miette = "7.6.0"
crossbeam = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wkt = "0.14"

microcad-lang = { workspace = true }
microcad-core = { workspace = true }
microcad-builtin = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
