# Copyright © 2025-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-viewer"
description = "µcad Viewer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "png",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_color",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_text",
    "bevy_window",
    "bevy_anti_alias",
    "bevy_post_process",
    "bevy_winit",
    "tonemapping_luts",
    "x11",
    "wayland",
    "zstd_rust",
] }

bevy_mod_outline = "0.12.1"
bytemuck = "1.24"
clap = { version = "4.5.48", features = ["derive"] }
cgmath = { version = "0.18", features = ["serde"] }
crossbeam = "0.8"
dirs = "6"
env_logger = "0.11"
geo = "0.33"
log = "0.4"
miette = { version = "7.6.0", features = ["fancy"] }
notify = "8"
percent-encoding = "2.3.2"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5.7"
wkt = "0.14"

microcad-driver = { workspace = true }
microcad-viewer-ipc = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
