# Copyright © 2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-zed"
edition = "2024"
license = "MIT"
publish = false
version = "0.0.1"

[lib]
crate-type = ["cdylib"]
path = "src/microcad.rs"

[dependencies]
zed_extension_api  = "0.7.0"
