# Copyright © 2024-2026 The µcad authors <info@microcad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad_markdown_test"
description = "Library to generate tests from µcad code snippets inside markdown files"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
regex = "1.11.1"
miette = "7.6.0"
log = "0.4"
env_logger = "0.11"
microcad_test_tools = { path = "../microcad_test_tools", version = "0" }

[lints.rust]
missing_docs = "warn"
