# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad_pest_test"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
log = "0.4"
env_logger = "0.11"

[lints.rust]
missing_docs = "warn"
