# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad_test_tools"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
regex = "1.11.1"
rustfmt-wrapper = "0.2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pathdiff = "0.2"

[lints.rust]
missing_docs = "warn"
